<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/top"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="top">

        <include
            layout="@layout/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_otp"
                android:textColor="#F65F52"
                android:textSize="@dimen/_19sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/red_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></include>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/msg_layout"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_your_message_or"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/email_for_otp_code"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editext_otp1"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:nextFocusDown="@+id/edt_otp2"
            android:textSize="@dimen/_21sdp" />

        <EditText
            android:id="@+id/editext_otp2"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:maxLength="1"
            android:maxLines="1"
            android:nextFocusDown="@+id/edt_otp3"
            android:textSize="@dimen/_21sdp" />

        <EditText
            android:id="@+id/editext_otp3"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:focusableInTouchMode="true"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="@dimen/_21sdp" />

        <EditText
            android:id="@+id/editext_otp4"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="@dimen/_21sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_resendotp"
            android:text="@string/resend_otp"
            android:padding="@dimen/_10sdp"
            android:textColor="#F65F52"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/submit"
            android:gravity="center"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingRight="@dimen/_3sdp"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_19sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal">

        <include
            layout="@layout/down_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></include>
    </LinearLayout>

</LinearLayout>
