<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/agent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:arrowSize="@dimen/_15sdp"
                        app:customMasterCountries="NG,US,IN"
                        app:defaultNameCode="NG"
                        app:keyboardAutoPopOnSearch="false"
                        app:textSize="@dimen/_10sdp" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textinput_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColorHint="@color/textColor">

                        <EditText
                            android:id="@+id/edittext_login_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/mobile"
                            android:inputType="phone"
                            android:maxLength="11"
                            android:maxLines="1"
                            android:paddingTop="@dimen/_5sdp"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/_15sdp" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:background="#E1E1E1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/admin_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinput_admin_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColorHint="@color/textColor">

                    <EditText
                        android:id="@+id/edittext_reg_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="User Name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_10sdp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:background="#E1E1E1" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinput_admin_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/textColor">

                    <EditText
                        android:id="@+id/edittext_reg_address"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_5sdp"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_12sdp" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="#E1E1E1" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_weight="1"
                android:padding="@dimen/_5sdp"
                android:text="@string/register_"
                android:textColor="#F65F52"
                android:textSize="@dimen/_12sdp" />


            <TextView
                android:id="@+id/textview_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="@dimen/_5sdp"
                android:text="@string/chang_to_admin"
                android:textColor="#F65F52"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_3sdp">


            <Button
                android:id="@+id/button_submit"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/redColor"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <include layout="@layout/down_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/_3sdp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_1sdp"
                    android:text="@string/login_terms"
                    android:textSize="@dimen/_5sdp" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>




</RelativeLayout>